Thu Apr 12 08:17:57 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
          Compile fix

Wed Apr 11 10:41:14 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/ami4ccm/tests/InterOutArgs/Sender/InterOutArgsT_Sender_exec.h:
        * connectors/ami4ccm/tests/InterOutArgs/Sender/InterOutArgsT_Sender_exec.cpp:
        * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender_exec.cpp:
        * connectors/ami4ccm/tests/PragmaT/Sender/PragmaT_Sender_exec.h:
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Sender_comp/src/Hello_Sender_comp_exec.cpp:
          Coverity fixes

Fri Apr 06 09:03:19 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.1.1 released.

Mon Mar 26 10:46:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Bar.mpc:
          Fixed windows link issues

Fri Mar 23 22:04:28 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Foo.idl:
          Forgot to commit this last version

Fri Mar 23 21:58:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Cornucopia/Cornucopia.doxygen:
          Parse more files

        * tests/IDL_Test/Cornucopia/Cornucopia.idl:
          Added some documentation to be copied by doxygen to the
          executor header

Fri Mar 23 20:34:35 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4009_Regression/Bug_4009_Bar.idl:
        * tests/Bug_4009_Regression/Bug_4009_Bar.mpc:
        * tests/Bug_4009_Regression/Bug_4009_Foo.idl:
          Extended this test with much more typedefs
